Maintenance (#1063)
- Configure Qlty
- Fix some Sonar findings
- Fix editorconfig
- Migrate off of PR labeler in the relevant workflow
- Add Sonar plugin
- Configure Sonar coverage upload in relevant workflows
- Add Sonar badges
- Update JS dependencies

{major}

Signed-off-by: Esta Nagy <nagyesta@gmail.com>